Update about page

--- a/about.njk
+++ b/about.njk
@@ -40,10 +40,21 @@ div.clearfix::after {
 
 <h4>Work Experience</h4>
 {{ left_right('<a href="https://aws.amazon.com/">Amazon Web Services</a>', 'Seattle, WA') }}
-{{ left_right('Software Engineer', 'August 2018 - Now') }}
+{{ left_right('Senior Software Engineer', 'December 2021 - Now') }}
+{{ left_right('Software Engineer', 'August 2018 - December 2021') }}
 
 <p>
-I joined the Elastic Block Storage team.
+I was a founding member of the
+<a href="https://aws.amazon.com/lookout-for-equipment/">Lookout for Equipment</a>
+engineering team, focusing on the development of the Python analytics library
+jointly with the data science team. Additionally, I re-architected
+<a href="https://aws.amazon.com/monitron/">Monitron</a>'s back-end analytics
+flows to Java/Python for rapid prototyping and deployment.
+</p>
+
+<p>
+Previously, I worked on big data analysis in
+<a href="https://aws.amazon.com/ebs/">Elastic Block Storage</a>.
 </p>
 
 {{ left_right('<a href="https://www.qualtrics.com/">Qualtrics</a>', 'Seattle, WA') }}
