Switch to machine learning engineer

--- a/about.njk
+++ b/about.njk
@@ -40,8 +40,12 @@ div.clearfix::after {
 
 <h4>Work Experience</h4>
 {{ left_right('<a href="https://aws.amazon.com/">Amazon Web Services</a>', 'Seattle, WA') }}
-{{ left_right('Senior Software Engineer', 'December 2021 - Now') }}
+{{ left_right('Senior Machine Learning Engineer', 'December 2021 - Now') }}
 {{ left_right('Software Engineer', 'August 2018 - December 2021') }}
+
+<p>
+Currently, I'm building the serving component for a new generative AI service.
+</p>
 
 <p>
 I was a founding member of the
