Switch to Amazon Bedrock

--- a/about.njk
+++ b/about.njk
@@ -44,7 +44,7 @@ div.clearfix::after {
 {{ left_right('Software Engineer', 'August 2018 - December 2021') }}
 
 <p>
-Currently, I'm building the serving component for a new generative AI service.
+Currently, I'm building the serving component for the Amazon Bedrock foundation model service.
 </p>
 
 <p>
