Update about focus

--- a/about.njk
+++ b/about.njk
@@ -44,7 +44,9 @@ div.clearfix::after {
 {{ left_right('Software Engineer', 'August 2018 - December 2021') }}
 
 <p>
-Currently, I'm building the serving component for the Amazon Bedrock foundation model service.
+Currently, I'm building the data plane component for the Amazon Bedrock
+foundation model service. I focus on providing an optimized inference server
+for Amazon's Titan models, including Large Language Models (LLMs).
 </p>
 
 <p>
