--- a/about.njk
+++ b/about.njk
@@ -84,7 +84,7 @@ experience dashboard product.
 <p>
 My group designed, built, and supported over-the-counter
 (OTC) interest rate swap (IRS) clearing solutions. This
-included price, margin, default fund model development.
+included price, margin, and default fund model development.
 </p>
 
 <p>
